# sara_behaviors

./: .gitignore  README.md  install.sh  list_sara_behaviors.yaml  list_sara_states.yaml
behaviors/behavior_a_go_home/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_a_test_sandbox/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_a_test_sandbox/src/behavior_a_test_sandbox/: a_test_sandbox_sm.py
behaviors/behavior_action_count/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_count/src/behavior_action_count/: action_count_sm.py
behaviors/behavior_action_executor/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_executor/src/behavior_action_executor/: action_executor_sm.py
behaviors/behavior_action_find/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_find/src/behavior_action_find/: action_find_sm.py
behaviors/behavior_action_findperson/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_findperson/src/behavior_action_findperson/: action_findperson_sm.py
behaviors/behavior_action_follow/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_follow/src/behavior_action_follow/: action_follow_sm.py
behaviors/behavior_action_get_entity_pose/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_get_entity_pose/src/behavior_action_get_entity_pose/: action_get_entity_pose_sm.py
behaviors/behavior_action_give_back_bag/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_give_back_bag/src/behavior_action_give_back_bag/: action_give_back_bag_sm.py
behaviors/behavior_action_lookaroundtofind/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_lookaroundtofind/src/behavior_action_lookaroundtofind/: action_lookaroundtofind_sm.py
behaviors/behavior_action_lookatbase/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_lookatbase/src/behavior_action_lookatbase/: action_lookatbase_sm.py
behaviors/behavior_action_lookatfacebase/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_lookatfacebase/src/behavior_action_lookatfacebase/: action_lookatfacebase_sm.py
behaviors/behavior_action_pass_door/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_pick/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_pick/src/behavior_action_pick/: action_pick_sm.py
behaviors/behavior_action_point_at/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_action_point_at/src/behavior_action_point_at/: action_point_at_sm.py
behaviors/behavior_action_setexpression/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionmovearm/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionwrapper_confirm/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionwrapper_find_person/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionwrapper_follow/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionwrapper_stop/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionwrapper_turn/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_actionwrapper_waitfordoor/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_age_statistics/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_check_reachability/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_get_robot_pose/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_get_speech/: CMakeLists.txt  package.xml  setup.py
behaviors/behavior_get_waypoint_pose/: CMakeLists.txt  package.xml  setup.py
custom_modules/: setup.py
flexbe_behaviors/: package.xml
flexbe_behaviors/behavior_testgenderage/: CMakeLists.txt
flexbe_behaviors/behavior_testgenderageclassification/: CMakeLists.txt  package.xml  setup.py
flexbe_behaviors/behaviors/: behavior_a_go_home.xml  behavior_a_test_sandbox.xml  behavior_a_test_wonderland.xml  behavior_action_count.xml  behavior_action_executor.xml  behavior_action_find.xml  behavior_action_findperson.xml  behavior_action_follow.xml  behavior_action_get_entity_pose.xml  behavior_action_give.xml  behavior_action_give_back_bag.xml  behavior_action_guide2.xml  behavior_action_guiding_person.xml  behavior_action_look_at.xml  behavior_action_look_at_face.xml  behavior_action_lookaroundtofind.xml  behavior_action_lookatbase.xml  behavior_action_lookatfacebase.xml  behavior_action_pass_door.xml  behavior_action_pick.xml  behavior_action_place.xml  behavior_action_point_at2.xml  behavior_action_receive_bag.xml  behavior_action_setexpression.xml  behavior_action_turn.xml  behavior_actionmovearm.xml  behavior_actionwrapper_answer.xml  behavior_actionwrapper_ask.xml  behavior_actionwrapper_attach.xml  behavior_actionwrapper_bring.xml  behavior_actionwrapper_confirm.xml  behavior_actionwrapper_count.xml  behavior_actionwrapper_find.xml  behavior_actionwrapper_find_person.xml  behavior_actionwrapper_follow.xml  behavior_actionwrapper_give.xml  behavior_actionwrapper_guide.xml  behavior_actionwrapper_lookat.xml  behavior_actionwrapper_move.xml  behavior_actionwrapper_movebase.xml  (+70 more)
flexbe_behaviors/launch/: test_speak.launch
sara_flexbe_states/: CMakeLists.txt  package.xml  setup.py
sara_flexbe_states/src/sara_flexbe_states/: AMCL_initial_pose.py  CheckMisplacedObjects.py  CheckMisplacedObjetcs.py  ClosestObject.py  FIFO_Add.py  FIFO_Get.py  FIFO_New.py  Filter.py  FilterKey.py  Fitler.py  Found_age_statistics.py  GenPointedPoints.py  GenerateEntity.py  GetAttribute.py  GetClosestEntity.py  GetClosestObstacle.py  GetEmptyChair.py  GetEntityFromListByID.py  GetGraspFromEntity.py  GetIDPose.py  GetPersonID.py  GetPointedPositionOnPlane.py  GetPositionToPlaceOnTable.py  GetRosParam.py  GetRosParamKey.py  Get_Entity_By_ID.py  Get_Number_From_Text.py  Get_direction_to_point.py  KeepLookingAt.py  List_Entities_By_Name.py  LogEntity.py  LookAtPos.py  Look_at_sound.py  ObjectDetection_CreatePDF.py  ObjectDetection_GetImages.py  RosLaunch.py  SetKey.py  SetRosParam.py  SetRosParamKey.py  SetSegmentationRosParam.py  (+112 more)
(+538 files in other folders)
