<package>
  <name>flexbe_behaviors</name>
  <version>1.0.0</version>
  <description>
     flexbe_behaviors references all implemented behaviors.
  </description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>

  <!-- Add here all ROS packages that contain behaviors -->
  <run_depend>behavior_example_behavior</run_depend>
  <run_depend>behavior_hello_world_demo</run_depend>
  <run_depend>behavior_sara_move</run_depend>
  <run_depend>behavior_sara_main_behavior</run_depend>
  <run_depend>behavior_move_arm</run_depend>
  <run_depend>behavior_testbooltopic</run_depend>
  <run_depend>behavior_test</run_depend>
  <run_depend>behavior_subbooltopic</run_depend>
  <run_depend>behavior_sara_action_executor</run_depend>
  <run_depend>behavior_testing_fifo</run_depend>
  <run_depend>behavior_sara_action_manager</run_depend>
  <run_depend>behavior_actionmovearm</run_depend>
  <run_depend>behavior_test_move_arm</run_depend>
  <run_depend>behavior_testmovearm</run_depend>
  <run_depend>behavior_selectobject</run_depend>
  <run_depend>behavior_actionwrapper_waitfordoor</run_depend>

</package>
