<package>
  <name>sara_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     sara_flexbe_states provides a collection of custom states.
     Feel free to add new states.
  </description>
  <maintainer email="philippe117@live.fr"></maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>moveit</run_depend>

  <run_depend>flexbe_core</run_depend>

</package>
