<package>
  <name>behavior_a_go_home</name>
  <version>1.0.0</version>
  <description>
     sara will go to her docking port
  </description>
  <maintainer email="todo@todo.com">Philippe La Madeleine</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_a_go_home</url>
  <author>Philippe La Madeleine</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>

</package>