<package>
  <name>behavior_a_test_sandbox</name>
  <version>1.0.0</version>
  <description>
     Une behavior pour faire des tests rapidement.
  </description>
  <maintainer email="todo@todo.com">TestMan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_a_test_sandbox</url>
  <author>TestMan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_mirror</run_depend>
  <run_depend>flexbe_testing</run_depend>

</package>