<package>
  <name>behavior_action_find</name>
  <version>1.0.0</version>
  <description>
     ## behavior
cherche et trouve quelque chose. (personne ou objet)en souscriant au topic /entities

### input keys
- name: nom de l'objet
- location: endroit où chercher
- initiative: niveau d'initiative. 

### output keys
- found_location: endroit où on à trouvé

### outcomes
- found
- unknown
- unreachable
- not_found

### initiative
le niveau d'initiative indique si on veux que le robot décide, par exemple, de chercher ailleurs s'il ne trouve pas.
# 0
Ne fait que chercher dans sa mémoire où l'objet était.
# 1
Regarde autour avec sa tête et son cou. Si trouve pas, retourne avec l'outcome not_found
# 2
Tourne sur sois même. Si trouve pas, retourne avec l'outcome not_found
# 3
Tourne sur soit même. Si trouve pas, cherche dans les autres endroits les plus proches.
  </description>
  <maintainer email="todo@todo.com">Raphaël Duchaîne</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_action_find</url>
  <author>Raphaël Duchaîne</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>

</package>