<package>
  <name>behavior_action_follow</name>
  <version>1.0.0</version>
  <description>
     Permet de suivre quelqu'un.

Utilise la liste des entitées du topic /entities
  </description>
  <maintainer email="todo@todo.com">Raphael Duchaine</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_action_follow</url>
  <author>Raphael Duchaine</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>

</package>