<package>
  <name>behavior_action_lookaroundtofind</name>
  <version>1.0.0</version>
  <description>
     Cherche et trouve quelque chose. (personne ou objet) en étant souscrit au topic /entities
  </description>
  <maintainer email="todo@todo.com">Raphaël Duchaîne</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_action_lookaroundtofind</url>
  <author>Raphaël Duchaîne</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>

</package>