<package>
  <name>behavior_action_setexpression</name>
  <version>1.0.0</version>
  <description>
     State qui change la couleur des expressions de SARA.
  </description>
  <maintainer email="todo@todo.com">Redouane Laref</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_action_setexpression</url>
  <author>Redouane Laref</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>

</package>