<package>
  <name>behavior_actionwrapper_find_person</name>
  <version>1.0.0</version>
  <description>
     Action Wrapper for find a person visually arround the robot.
  </description>
  <maintainer email="todo@todo.com">Lucas Maurice</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_actionwrapper_find_person</url>
  <author>Lucas Maurice</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_mirror</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_testing</run_depend>

</package>