<package>
  <name>behavior_actionwrapper_turn</name>
  <version>1.0.0</version>
  <description>
     action wrapper pour turn
  </description>
  <maintainer email="philippe117@live.fr">Philippe La Madeleine</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_actionwrapper_turn</url>
  <author>Philippe La Madeleine</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>

</package>