<package>
  <name>behavior_actionwrapper_waitfordoor</name>
  <version>1.0.0</version>
  <description>
     This behavior waits for the opening of a door
  </description>
  <maintainer email="todo@todo.com">Samuel Otis</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_actionwrapper_waitfordoor</url>
  <author>Samuel Otis</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>

</package>