<package>
  <name>behavior_age_statistics</name>
  <version>1.0.0</version>
  <description>
     Return the number of person in each age range of gender-age-service
  </description>
  <maintainer email="todo@todo.com">QuentinG</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_age_statistics</url>
  <author>QuentinG</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>

</package>