<package>
  <name>behavior_check_reachability</name>
  <version>1.0.0</version>
  <description>
     check if the object is in range
  </description>
  <maintainer email="todo@todo.com">Philippe La Madeleine</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_check_reachability</url>
  <author>Philippe La Madeleine</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>sara_flexbe_states</run_depend>

</package>