<package>
  <name>behavior_get_robot_pose</name>
  <version>1.0.0</version>
  <description>
     Get the current position of the robot
  </description>
  <maintainer email="todo@todo.com">Nicolas Nadeau</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/behavior_get_robot_pose</url>
  <author>Nicolas Nadeau</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>sara_flexbe_states</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>flexbe_utility_states</run_depend>
  <run_depend>flexbe_navigation_states</run_depend>
  <run_depend>flexbe_manipulation_states</run_depend>

</package>